Fixed UI to test backend

--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
         <div id="beeper-form">
             <h2>Add New Beeper</h2>
             <form id="add-beeper-form">
-                <label for="status">Status:</label>
-                <select id="status" name="status">
-                    <option value="produced">Produced</option>
-                    <option value="explosives_added">Explosives Added</option>
-                    <option value="shipped">Shipped</option>
-                    <option value="deployed">Deployed</option>
-                </select>
+                <label for="name">Name:</label>
+                <input type="text" name="beeperName" value=""/>
                 <button type="submit">Add Beeper</button>
             </form>
         </div>
